# home-assistant-config-validator

./: .coderabbit.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: codspeed.yml  create_new_release.yml  draft_release.yaml  draft_release.yml  integration_test.yml  manage_pr_labels.yml  publish_release.yml  set_pr_auto_merge.yml
home_assistant_config_validator/: __init__.py  config.py  const.py  constants.py  custom_components_loader.py  exception.py  ha_yaml_loader.py  main.py  readme_generator.py  validate_entities.py  validate_lovelace.py
home_assistant_config_validator/config/: base.py  documentation.py  parser.py  validation.py
home_assistant_config_validator/models/: __init__.py  package.py  readme_entity.py
home_assistant_config_validator/models/config/: __init__.py  base.py  documentation.py  parser.py  validation.py
home_assistant_config_validator/utils/: __init__.py  args.py  const.py  exception.py  ha_yaml_loader.py  helpers.py  json_processor.py
tests/benchmark/: conftest.py  test__hooks.py  test_validate_entities.py
